# fiberhttp

./: .env  .gitignore  README.md  aiohttp_benchmark.py  common.py  fiberhttp_benchmark.py  http-client_benchmark.py  httpx-async_benchmark.py  httpx_benchmark.py  pyproject.toml  requests_benchmark.py  run.sh  server.py  urllib3_benchmark.py
benchmark/: aiohttp_benchmark.py  common.py  crap.py  fiberhttp_benchmark.py  http-client_benchmark.py  httpx-async_benchmark.py  httpx_benchmark.py  requests_benchmark.py  urllib3_benchmark.py
benchmarks/: aiohttp_benchmark.py  benchmark_helper.py  fiberhttp_benchmark.py  http-client_benchmark.py  httpx-async_benchmark.py  httpx_benchmark.py  pyproject.toml  requests_benchmark.py  urllib3_benchmark.py
benchmarks/local server/: server.py
benchmarks/src/http_benchmarks/: __init__.py  httpx_benchmark.py  server.py
benchmarks2/: benchmark.py  benchmark.sh  server.py  server_fastapi_async.py  server_fastapi_sync.py  server_flask.py  settings.py
