[project]
name = "http-benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.10",
    "fiberhttp>=4.1",
    "httpx>=0.27.2",
    "requests>=2.32.3",
    "structlog>=24.4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
