[project]
name = "http-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NostraDavid", email = "55331731+NostraDavid@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "fiberhttp>=4.1",
    "httpx>=0.27.2",
    "requests>=2.32.3",
]

[project.scripts]
server = "http_benchmarks:server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
